--- a/02/index.html
+++ b/02/index.html
@@ -77,34 +77,20 @@ While the tutorial was relatively straight forward, I struggled first to underst
 
 I decided to use concentric circles of different diameter for my press fit construction kit. This was relatively easy to alter from my first design following the tutorial. At first, I had some trouble saving the sketch as a file that would be read by the laser cutting program. I was trying to save the sketch lines directly as a dxl file after extruding the lines (as shown in the tutorial) but I realized that I needed to reproject the sketch on a plane after extruding as shown below:
 
-<div class = "center">
-  <img src="../02/circle.jpg" 
-     width ="500" height="400"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/circle.jpg">
 
 To create the correct notch sizes I created parameters for both “halfwidth” (half of the width of cardboard using a caliper) and kerf. Once I imported it to the laser printer and printed my first iteration I found that my notches were way smaller than I had planned. This is because I was resizing my circle in the laser cutter software and was not accounting for how that how proportionally affect my notch sizes.
 
-<div class = "center">
-  <img src="../02/toosmall.jpg" 
-     width ="300" height="400"/>
-</div>
-
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/toosmall.jpg">
 
 To allow for me to change my circle sizes easily without changing the notch size, I created parameters for the outer circle and inner circle:
 
 This worked well and my second iteration was much more of a success! However the notches were still slightly too big so I reduced the cardboard size by 0.2mm accounting for more crushed cardboard surface:
 
-<div class = "center">
-  <img src="../02/pressfit.jpg" 
-     width ="300" height="400"/>
-</div>
-
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pressfit.jpg">
 With the following parameters:
 
-<div class = "center">
-  <img src="../02/parameters1.jpg" 
-     width ="950" height="300"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/parameters1.jpg">
 
 Success!
 
@@ -113,29 +99,17 @@ I wanted to apply my press-fit construction skills to make a cute animal puzzle 
 
 At first I thought I could print the above circles in the same way and simply add the frame (shown below):
 
-<div class = "center">
-  <img src="../02/pigframe.jpg" 
-     width ="650" height="400"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pigframe.jpg">
 
 However, I realized soon the the angle between the notches would be too wide for the pig to stand upright, so I had to edit all of the notch angles to 35 degrees. After playing around with the dimensions for each component and adding a face to my pig, here is my final result:
 
-<div class = "center">
-  <img src="../02/pigface.jpg" 
-     width ="700" height="400"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pigface.jpg">
 
-<div class = "center">
-  <img src="../02/pig.jpg" 
-     width ="300" height="400"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pig.jpg">
 
 With the following parameters: (for main circles of pig body):
 
-<div class = "center">
-  <img src="../02/parameters2.jpg" 
-     width ="950" height="300"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/parameters2.jpg">
 
 <u>Things I would do differently</u>
 - Make notches closer together for frame so the pig would have more circles constituting its body
@@ -149,35 +123,23 @@ For my first household item I decided to model was my water bottle. I thought th
 
 For this first modelling I took the revolve approach and only made a 2D side view as shown below:
 
-<div class = "center">
-  <img src="../02/bottlesketch.jpg" 
-     width ="600" height="260"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/bottlesketch.jpg">
+
 While my first revolving attempt was successful, I had some difficulties extruding the top of the water bottle so that it would be empty. Fusion 360 kept asking me to choose a plane to extrude in and as a result kept cutting from the bottom of the water bottle. I fixed this by redrawing my sketch component by component, but I am still not quite sure what the error was. 
 
 After revolving successfully, I went back to add in my dimensions from my caliper measurements. In hindsight I should have done this step first considering that many of my added dimensions were “over constrained” because I had already offset the lines and added curves to my drawings. To fix this, I went back to a simple shape to add my dimensions and then added in the more complicated components after. Here is the final result:
 
-<div class = "center">
-  <img src="../02/bottle1.jpg" 
-     width ="500" height="300"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/bottle1.jpg">
 
-<div class = "center">
-  <img src="../02/bottle2.jpg" 
-     width ="300" height="400"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/bottle2.jpg">
+
 
 I then carried out the same process with my glasses but only used the extrude function. Here is the sketch before and after extruding.  It was a lot harder to get accurate caliper measurements due to the shape of the glasses:
 
-<div class = "center">
-  <img src="../02/glassessketch.jpg" 
-     width ="500" height="300"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/glassessketch.jpg">
 
-<div class = "center">
-  <img src="../02/glasses1.jpg" 
-     width ="500" height="300"/>
-</div>
+<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/glasses1.jpg">
+
 I could not figure out how to edit the temples of the glasses so that they were curved and had different thickness as shown in the real glasses.
 
 
@@ -185,12 +147,7 @@ I could not figure out how to edit the temples of the glasses so that they were 
 
 For the final assembly component of this week's assignment, I decided to separate the water bottle top and body into two separate sketches. Once I did this the process of assembling was straightforward: I inserted both drawings in a new file, and used the joint function to assemble as shown below:
 
-
-
-<video class="w-100" autoplay loop muted>
-  <source src="../02/movie.mp4" type="video/mp4"  />
-</video>
-
+<video alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/movie.mp4">
 
 </br>
   
@@ -203,7 +160,7 @@ For the final assembly component of this week's assignment, I decided to separat
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3712"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Layla Seaver - Environmental Science and Engineering Harvard'24.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
