--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-1 u-radius-30 u-repeater-item u-shape-round u-list-item-10" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-11"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-10" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/stepper2.png" alt=""></span>
                   <h4 class="u-text u-text-20" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-10" href="https://nicepage.com">WEEK 10</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-10" href=".//10/index.html">WEEK 10</a>
                   </h4>
                   <p class="u-text u-text-21" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Machine Building and End Effectors</p>
                 </div>
@@ -168,7 +168,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-dark-1 u-radius-30 u-repeater-item u-shape-round u-list-item-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-12"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-11" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/filter1.png" alt=""></span>
                   <h4 class="u-text u-text-22" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-11" href="https://nicepage.com">FINAL PROJECT</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-11" href=".//12/index.html">FINAL PROJECT</a>
                   </h4>
                   <p class="u-text u-text-23" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Planning and Progress</p>
                 </div>
@@ -176,7 +176,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-dark-2 u-radius-30 u-repeater-item u-shape-round u-list-item-12" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-13"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-12" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/system.png" alt=""></span>
                   <h4 class="u-text u-text-24" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-12" href="https://nicepage.com">FINAL PROJECT</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-12" href=".//FinalProject/index.html">FINAL PROJECT</a>
                   </h4>
                   <p class="u-text u-text-25" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Demo and Final Results</p>
                 </div>
