--- a/03/index.html
+++ b/03/index.html
@@ -109,18 +109,13 @@ At first I thought that I could simply attach the waves to a doyle and attach th
 While both vertical and horizontal Components of my kinetic sculpture work the lack of exactness in design and more advanced construction means that there is a high risk for both parts to get stuck. Ultimately I still see this as a success because I have a much better understanding of how to make things move in specific directions and I was able to use the laser cutter, drill press, hand saw and many other tools during this assignment.
 
 <video width ="300" height="500" autoplay loop muted>
-  <source src="../03/waves.mp4" type="video/mp4"  />
+  <source src="../03/waves.mp4" type="video/mp4" transform="rotate(90deg)" />
 </video>
 
 <b>Measuring voltage </b>
 
 Without any resistors, I measured the voltage to be V= 4.28 V, suggesting that there was some internal resistance in the circuit from the friction of the gears or the wires (likely the former). When I tried adding a 1k ohm resistor, it used up all of the 5 volts. I then swapped it out for a 100 ohm resistor and it also prevented the gears from running.
 
-
-<div class = "center">
-  <img src="../03/multimeter.jpeg" 
-     width ="300" height="400"/>
-</div>
 
 
 </xmp>
