--- a/03/index.html
+++ b/03/index.html
@@ -52,7 +52,7 @@
 </nav>
 
 <style>
-body {background-color: rgb(232, 245, 233);}
+body {background-color: rgb(163, 213, 254);}
 </style>
 
 <body class="Avantgarde" font-weight=300px align="justify">
@@ -82,7 +82,7 @@ At first I thought the simplest way to get my boats to bob up and down would be 
 
 <div class = "center">
   <img src="../03/boatswire.jpeg" 
-     width ="500" height="400"/>
+     width ="500" height="400" style="vertical-align:middle"/>
 </div>
 
 Since I couldn’t bend the doyles as done with the wire,  I decided to take inspiration from the butterfly kinetic sculpture example in class and attache circles at different lengths to allow for this up and down motion. 
@@ -95,7 +95,7 @@ Now that my system was considerably rigid, I found that I needed to add more cir
 The boats would get stuck occasionally as the sides supporting the platform were a little too close to the rotating system. If I get to do a second iteration of this I will definitely look into making It operate more smoothly. I glue gunned a lot of things in place as well and would like to find other ways to keep my system together.
 
 <video width ="500" height="300" autoplay loop muted>
-  <source src="../03/boats.mp4" type="video/mp4" />
+  <source src="../03/boats.mp4" type="video/mp4" style="float:right" />
 </video>
 
 <b>Horizontal motion </b>
@@ -109,7 +109,7 @@ At first I thought that I could simply attach the waves to a doyle and attach th
 While both vertical and horizontal Components of my kinetic sculpture work the lack of exactness in design and more advanced construction means that there is a high risk for both parts to get stuck. Ultimately I still see this as a success because I have a much better understanding of how to make things move in specific directions and I was able to use the laser cutter, drill press, hand saw and many other tools during this assignment.
 
 <video width ="300" height="500" autoplay loop muted>
-  <source src="../03/waves.mp4" type="video/mp4" transform="rotate(90deg)" />
+  <source src="../03/waves.mp4" type="video/mp4" style="float:left"/>
 </video>
 
 <b>Measuring voltage </b>
