--- a/02/index.html
+++ b/02/index.html
@@ -81,7 +81,7 @@ I decided to use concentric circles of different diameter for my press fit const
 
 To create the correct notch sizes I created parameters for both “halfwidth” (half of the width of cardboard using a caliper) and kerf. Once I imported it to the laser printer and printed my first iteration I found that my notches were way smaller than I had planned. This is because I was resizing my circle in the laser cutter software and was not accounting for how that how proportionally affect my notch sizes.
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/toosmall.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/toosmall.jpg">
 
 To allow for me to change my circle sizes easily without changing the notch size, I created parameters for the outer circle and inner circle:
 
@@ -90,7 +90,7 @@ This worked well and my second iteration was much more of a success! However the
 <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pressfit.jpg">
 With the following parameters:
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/parameters1.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/parameters1.jpg">
 
 Success!
 
@@ -99,17 +99,17 @@ I wanted to apply my press-fit construction skills to make a cute animal puzzle 
 
 At first I thought I could print the above circles in the same way and simply add the frame (shown below):
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pigframe.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/pigframe.jpg">
 
 However, I realized soon the the angle between the notches would be too wide for the pig to stand upright, so I had to edit all of the notch angles to 35 degrees. After playing around with the dimensions for each component and adding a face to my pig, here is my final result:
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pigface.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/pigface.jpg">
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/pig.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/pig.jpg">
 
 With the following parameters: (for main circles of pig body):
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/parameters2.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/parameters2.jpg">
 
 <u>Things I would do differently</u>
 - Make notches closer together for frame so the pig would have more circles constituting its body
@@ -123,20 +123,20 @@ For my first household item I decided to model was my water bottle. I thought th
 
 For this first modelling I took the revolve approach and only made a 2D side view as shown below:
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/bottlesketch.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/bottlesketch.jpg">
 
 While my first revolving attempt was successful, I had some difficulties extruding the top of the water bottle so that it would be empty. Fusion 360 kept asking me to choose a plane to extrude in and as a result kept cutting from the bottom of the water bottle. I fixed this by redrawing my sketch component by component, but I am still not quite sure what the error was. 
 
 After revolving successfully, I went back to add in my dimensions from my caliper measurements. In hindsight I should have done this step first considering that many of my added dimensions were “over constrained” because I had already offset the lines and added curves to my drawings. To fix this, I went back to a simple shape to add my dimensions and then added in the more complicated components after. Here is the final result:
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/bottle1.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/bottle1.jpg">
 
 
 I then carried out the same process with my glasses but only used the extrude function. Here is the sketch before and after extruding.  It was a lot harder to get accurate caliper measurements due to the shape of the glasses:
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/glassessketch.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/glassessketch.jpg">
 
-<img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="../02/glasses1.jpg">
+<img alt="" class="u-blog-control u-image u-image-default u-image-1" src="../02/glasses1.jpg">
 
 I could not figure out how to edit the temples of the glasses so that they were curved and had different thickness as shown in the real glasses.
 
