--- a/Home.html
+++ b/Home.html
@@ -62,7 +62,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-2 u-radius-30 u-repeater-item u-shape-round u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                 <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/149346.png" alt=""></span>
                   <h4 class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-1" href="../01_intro/index.html">WEEK 1</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-1" href="./01_intro/index.html">WEEK 1</a>
                   </h4>
                   <p class="u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Introduction and Documentation<span style="font-weight: 700;"></span>
                   </p>
@@ -71,7 +71,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-1 u-radius-30 u-repeater-item u-shape-round u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-2" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/lasercutter.png" alt=""></span>
                   <h4 class="u-text u-text-4" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-2" href="../02/index.html">Week 2</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-2" href="./02/index.html">Week 2</a>
                   </h4>
                   <p class="u-text u-text-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">2D Design and Cutting</p>
                 </div>
@@ -104,7 +104,7 @@
             
           </span>
                   <h4 class="u-text u-text-6" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-3" href="../03/index.html">WEEK 3</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-3" href="./03/index.html">WEEK 3</a>
                   </h4>
                   <p class="u-text u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Hand tools and Fabrication</p>
                 </div>
