--- a/06/index.html
+++ b/06/index.html
@@ -84,15 +84,47 @@
           <br>We see from the linear equation that the values can be converted to distances by multiplying it by a factor and then adding roughly 22. This was strange for me to see at first as I would have expected the line to go through the origin. However when I played around with this and tried putting the block right up to the sensor it would read incredibly high values. I’m not sure if the calibration was just off or if the sensor simply couldn’t detect the object when it was that close and therefore measured an object extremely far away. It would be interesting to look into the smallest distance the sensor could reasonably pick up. <br>
           <br>
           <br>I wanted to see if I could account for this conversion in my Arduino code so that I would not have to plot this relationship and I could get the information directly from Serial Monitor. I googled that the ultrasonic sensor works by using sound waves which we can assume have a speed of 340 m/s in air. If we multiply this by the duration of the sound wave and divide the wavelength by two we get the distance of the sound wave to travel to the object and back. I was therefore able to directly measure for distance as shown in the code below. I imagine this would be harder or impossible to do for some more complex sensors such as pressure. <br>
-          <br>&lt;pre&gt;&lt;code&gt; <br>
-          <br>duration = pulseIn(echo, HIGH); <br>distance = duration*0.034 / 2; <br>Serial.print("Distance: "); <br>Serial.println(distance); <br>//Get the sound wave reflection time and convert to cm and print on serial monitor. <br>
-          <br>} <br>&lt;/code&gt;&lt;/pre&gt; <br>
-          <br>After completing this step I decided to remove the delay function in my code. This ended up taking some time and proved quite difficult for me. I had to create new variables to define my previous millies, intervals of time (delay) and trig state and echo state. Once I figured out how to properly embed things in if statements it seemed to work. The code is shown below: <br>
-          <br>&lt;pre&gt;&lt;code&gt; <br>
-          <br>void loop() <br>{ <br> // check to see if it's time to change the state of the LED <br> unsigned long currentMillis = millis(); <br> unsigned long previousMillis=0; <br> int duration = 0; <br> int distance = 0; <br>
-          <br> if((trig == LOW) &amp;&amp; (currentMillis - previousMillis1 &gt;= intervaloff)) <br> { <br> digitalWrite(trig, LOW); // turn off trig pin <br> previousMillis1 = currentMillis;  // Remember the time <br> digitalWrite(trig, trigstate);  // Update the trig state <br> } <br> else if ((trig == HIGH) &amp;&amp; (currentMillis - previousMillis1 &gt;= intervalon)) <br> { <br> digitalWrite(trig, HIGH);  // turn it on <br> previousMillis1 = currentMillis;   // Remember the time <br> digitalWrite(trig, trigstate);    // Update the actual trig state <br> } <br>
-          <br>&lt;/code&gt;&lt;/pre&gt; <br>
-          <br>
+
+          <pre><code>
+
+duration = pulseIn(echo, HIGH);
+distance = duration*0.034 / 2;
+Serial.print("Distance: ");
+Serial.println(distance);
+//Get the sound wave reflection time and convert to cm and print on serial monitor.
+
+}
+</code></pre>
+
+
+
+After completing this step I decided to remove the delay function in my code. This ended up taking some time and proved quite difficult for me. I had to create new variables to define my previous millies, intervals of time (delay) and trig state and echo state. Once I figured out how to properly embed things in if statements it seemed to work. The code is shown below:
+
+<pre><code>
+
+void loop()
+{
+  // check to see if it's time to change the state of the LED
+  unsigned long currentMillis = millis();
+  unsigned long previousMillis=0;
+  int duration = 0; 
+  int distance = 0;
+ 
+  if((trig == LOW) && (currentMillis - previousMillis1 >= intervaloff))
+  {
+    digitalWrite(trig, LOW); // turn off trig pin
+    previousMillis1 = currentMillis;  // Remember the time
+    digitalWrite(trig, trigstate);  // Update the trig state
+  }
+  else if ((trig == HIGH) && (currentMillis - previousMillis1 >= intervalon))
+  {
+    digitalWrite(trig, HIGH);  // turn it on
+    previousMillis1 = currentMillis;   // Remember the time
+    digitalWrite(trig, trigstate);    // Update the actual trig state
+  }
+
+</code></pre>
+
           <br>Finally here is my circuit for the ultrasonic sensor. I didn’t use a breadboard so the set-up is fairly simply: <br>
           <br>&lt;div class = "center"&gt; <br> &lt;img src="../06/ultracircuit.png" <br> width ="400" height="500"/&gt; <br>&lt;/div&gt; <br>
           <br>
