--- a/01_intro_new/index.html
+++ b/01_intro_new/index.html
@@ -53,10 +53,10 @@
 
 
 <style>
-body {background-color: rgb(212, 252, 255);}
+body {background-color: rgb(249, 248, 255);}
 </style>
 
-<body class="Avantgarde" font-weight=300px align="justify">
+<body font-family = "Roboto Slab" font-weight=300px align="justify">
 <h1 font weight=700px>Project Proposal</h1>
 
 <xmp style="display:none;">
