--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,11 @@
         <h3 class="u-custom-font u-font-roboto-slab u-text u-text-default u-text-1">PS70: Intro to Digital Fabrication</h3>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-de3b">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-align-center u-text u-text-default u-text-1">
+          <a class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-1" href="mailto:laylaseaver@college.harvard.edu">Contact</a>
+        </p>
+      </div>
     </section>
     
     
