--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -3,6 +3,8 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed'>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
@@ -13,7 +15,7 @@
 
 
 <!--/*Source: Navbar Bootstrsap -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
@@ -53,11 +55,11 @@
 
 
 <style>
-body {background-color: rgb(163, 213, 254);}
+body {background-color: rgb(249, 248, 255);}
 </style>
 
-<body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Project Proposal</h1>
+<body font-family = "Roboto Slab" font-weight=300px align="justify">
+<h1 style= "font-family:Roboto Condensed; font weight:700px; font color:color:rgb(212, 234, 246);"> PROJECT PROPOSAL</h1>
 
 <xmp style="display:none;">
 <br> 
