--- a/03/index.html
+++ b/03/index.html
@@ -3,6 +3,8 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed'>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
@@ -52,11 +54,11 @@
 </nav>
 
 <style>
-body {background-color: rgb(212, 252, 255);}
+body {background-color: rgb(249, 248, 255);}
 </style>
 
-<body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Week 3: Hand tools and Fabrication </h1>
+<body font-family = "Roboto Slab" font-weight=300px align="justify">
+<h1 font-family = "Roboto Condensed" font weight=700px font color="color:rgb(212, 234, 246)">WEEK 3: HAND TOOLS AND FABRICATION </h1>
 
 <xmp style="display:none;">
 <br> 
