--- a/06/index.html
+++ b/06/index.html
@@ -3,7 +3,8 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
-
+<link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed'>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
@@ -60,11 +61,11 @@
 <body>
 
 <style>
-body {background-color: rgb(163, 213, 254);}
+body {background-color: rgb(249, 248, 255);}
 </style>
 
-<body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Week 6: Electronic Input Devices</h1>
+<body font-family = "Roboto Slab" font-weight=300px align="justify">
+<h1 font-family = "Roboto Condensed" font weight=700px font color="color:rgb(212, 234, 246)">WEEK 6: ELECTRONIC INPUT DEVICES</h1>
 
 <xmp style="display:none;">
 <br> 
