--- a/08/index.html
+++ b/08/index.html
@@ -4,7 +4,8 @@
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
 
-
+<link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed'>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
@@ -62,11 +63,11 @@
 
 
 <style>
-body {background-color: rgb(232, 245, 233);}
+body {background-color: rgb(249, 248, 255);}
 </style>
 
-<body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Week 8: CNC milling, molding and casting</h1>
+<body font-family = "Roboto Slab" font-weight=300px align="justify">
+<h1 font-family = "Roboto Condensed" font weight=700px font color="color:rgb(212, 234, 246)">WEEK 8: CNC MILLING, MOLDING AND CASTING</h1>
 
 <xmp style="display:none;">
 <br> 
