--- a/04/index.html
+++ b/04/index.html
@@ -52,11 +52,14 @@
 </nav>
 
 <style>
-body {background-color: rgb(232, 245, 233);}
+body {background-color: rgb(249, 248, 255);}
+</style>
+<style>
+  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
 </style>
 
 <body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Week 4:3D Printing</h1>
+<h1>WEED 4: 3D PRINTING </h1>
 
 <xmp style="display:none;">
 <br> 
