--- a/09/index.html
+++ b/09/index.html
@@ -3,6 +3,8 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
@@ -59,12 +61,16 @@
 
 <body>
 
+
 <style>
-body {background-color: rgb(232, 245, 233);}
+body {background-color: rgb(249, 248, 255);}
+</style>
+<style>
+  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
 </style>
 
-<body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Week 9: Radio, Wifi, Bluetooth </h1>
+<body font-family = "Roboto Slab" font-weight=300px align="justify">
+<h1>WEEK 9: RADIO, WIFI, BLUETOOTH </h1>
 
 <xmp style="display:none;">
 <br> 
