--- a/06/index.html
+++ b/06/index.html
@@ -19,7 +19,7 @@
 
 
 <!--/*Source: Navbar Bootstrsap -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
@@ -63,9 +63,12 @@
 <style>
 body {background-color: rgb(249, 248, 255);}
 </style>
+<style>
+  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
+</style>
 
 <body font-family = "Roboto Slab" font-weight=300px align="justify">
-<h1 font-family = "Roboto Condensed" font weight=700px font color="color:rgb(212, 234, 246)">WEEK 6: ELECTRONIC INPUT DEVICES</h1>
+<h1>WEEK 6: ELECTRONIC INPUT DEVICES</h1>
 
 <xmp style="display:none;">
 <br> 
