--- a/08/index.html
+++ b/08/index.html
@@ -5,7 +5,7 @@
 <head>
 
 <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Roboto Condensed'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
@@ -20,7 +20,7 @@
 
 
 <!--/*Source: Navbar Bootstrsap -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
@@ -61,13 +61,15 @@
 
 <body>
 
-
 <style>
 body {background-color: rgb(249, 248, 255);}
 </style>
+<style>
+  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
+</style>
 
 <body font-family = "Roboto Slab" font-weight=300px align="justify">
-<h1 font-family = "Roboto Condensed" font weight=700px font color="color:rgb(212, 234, 246)">WEEK 8: CNC MILLING, MOLDING AND CASTING</h1>
+<h1>WEEK 8: CNC MILLING, MOLDING AND CASTING</h1>
 
 <xmp style="display:none;">
 <br> 
