--- a/12/index.html
+++ b/12/index.html
@@ -3,6 +3,8 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
